--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,31 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Gestor Interno
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-list>
+
+    <h1 class="titulos">{{ _teste }}</h1>
+
+    <ion-item>
+      <ion-label fixed>Usuário</ion-label>
+      <ion-input id="lg_usuario" type="text" value=""></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label fixed>Senha</ion-label>
+      <ion-input id="lg_senha" type="password"></ion-input>
+    </ion-item>
+
+    <button ion-button (click)="Login()">Iniciar</button>
+    <ion-icon name="heart"></ion-icon>                    <!-- active -->
+    <ion-icon name="heart"></ion-icon>                    <!-- active -->
+
+  </ion-list>
+
 </ion-content>
