mudando nome interno do app e adc. novo icone.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,7 @@
     <button ion-button (click)="Login()">Iniciar</button>
     <ion-icon name="heart"></ion-icon>                    <!-- active -->
     <ion-icon name="heart"></ion-icon>                    <!-- active -->
+    <ion-icon name="heart"></ion-icon>                    <!-- active -->
 
   </ion-list>
 
